@@ -1,5 +1,5 @@
 dnl Process this file with autoconf to produce a configure script.
-AC_REVISION([$Id: configure.in,v 1.70 1999/07/22 04:20:17 psmith Exp $])
+AC_REVISION([$Id: configure.in,v 1.71 1999/07/22 06:29:10 psmith Exp $])
 AC_PREREQ(2.13)dnl		dnl Minimum Autoconf version required.
 AC_INIT(vpath.c)dnl		dnl A distinctive file to look for in srcdir.
 
@@ -210,7 +210,7 @@ dnl build.sh is also an AC_OUTPUT, but we can't specify it here because
 dnl it's built from build.template and autoconf will crap out.  So, we
 dnl build it in the makefiles themselves.
 
-AC_OUTPUT(Makefile glob/Makefile)
+AC_OUTPUT(build.sh Makefile glob/Makefile)
 
 case "$make_badcust" in
   yes) echo
